--- a/UnityGameLoop/Assembly-CSharp.csproj
+++ b/UnityGameLoop/Assembly-CSharp.csproj
@@ -5,7 +5,7 @@
 	<Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
 	<ProductVersion>10.0.20506</ProductVersion>
 	<SchemaVersion>2.0</SchemaVersion>
-	<ProjectGuid>{8D1B43B4-620A-A4BD-CD9A-D13FFD2C0EE0}</ProjectGuid>
+	<ProjectGuid>{F8DEF8FC-CF9E-CBEF-F185-A73660B6FA0B}</ProjectGuid>
 	<OutputType>Library</OutputType>
 	<AppDesignerFolder>Properties</AppDesignerFolder>
 	<RootNamespace></RootNamespace>
@@ -52,7 +52,8 @@
      <Compile Include="Assets\Scripts\OSC.NET\jsOSCPacket.cs" />
      <Compile Include="Assets\Scripts\OSC.NET\jsOSCReceiver.cs" />
      <Compile Include="Assets\Scripts\OSC.NET\jsOSCTransmitter.cs" />
-     <Compile Include="Assets\Scripts\UnityOSCListener.cs" />
+     <Compile Include="Assets\Scripts\UnityOSCListenerThesen.cs" />
+     <Compile Include="Assets\Scripts\UnityOSCListenerWorms.cs" />
      <Compile Include="Assets\Scripts\UnityOSCReceiver.cs" />
      <Compile Include="Assets\Scripts\thesen.cs" />
      <Compile Include="Assets\Scripts\worms.cs" />
